--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 PORT=4000
 DB_URL=mongodb+srv://root:root@cluster0.bv2ui9w.mongodb.net/?retryWrites=true&w=majority
+JWT_ACCESS_SECRET=jwt-n_chat-access-secret_key
+JWT_REFRESH_SECRET=jwt-n_chat-refresh-secret_key
