--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "mobx": "^6.8.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
